--- a/index.html
+++ b/index.html
@@ -28,8 +28,12 @@
       <li><a href="#conclusion">Conclusion</a></li>
     </ul>
 
+    <hr id="mainline">
+
     <h2 id="what">What is <span style="color:#e67e22;">SQLite</span>?</h2>
-    <p style="line-height: 25px;"><strong>SQLite</strong> is a lightweight, serverless, self-contained SQL database engine. Unlike other databases, it doesn’t require a separate server to run.</p>
+    <p style="line-height: 30px; word-spacing: 0.05rem;"><strong>SQLite</strong> is a lightweight, serverless, self-contained SQL database engine. Unlike other databases, it doesn’t require a separate server to run.</p>
+
+    <hr>
 
     <h2 id="why">Why use <span style="color:#e67e22;">SQLite</span>?</h2>
     <ul>
@@ -38,6 +42,8 @@
       <li>Just one file = one database</li>
       <li>Easy to use with Python, JavaScript, etc.</li>
     </ul>
+
+    <hr>
 
     <h2 id="install">Installation Guide</h2>
     <h3 id="step-1-download-sqlite">📦 Step 1: Download SQLite</h3>
@@ -52,12 +58,16 @@
     <p>Open a terminal and type:</p>
     <pre><code>sqlite --version</code></pre>
 
+    <hr>
+
     <h2 id="reso">Further Resources</h2>
     <ul>
       <li><a href="https://www.sqltutorial.org/" target="_blank">SQL Tutorial</a></li>
       <li><a href="https://www.sqltutorial.org/sql-aggregate-functions/" target="_blank">SQL Functions</a></li>
       <li><a href="https://www.sqltutorial.org/sql-cheat-sheet/" target="_blank">SQL Cheat Sheet</a></li>
     </ul>
+
+    <hr>
 
     <h2 id="faqs">FAQs</h2>
     <p><b><span style="color:#e67e22;">Q1:</span> What makes SQLite different from other databases like MySQL?</b></p>
@@ -78,10 +88,17 @@
     <p><b><span style="color:#e67e22;">Q5:</span> How do I back up a SQLite database?</b></p>
     <p><span style="color:#e67e22;"><b>A:</b></span> Just copy the <code>.db</code> file. Ensure no write operations are happening during the copy..</p>
 
+    <hr>
+
         
     <h2 id="conclusion">Conclusion</h2>
-    <p>You’ve now reached the end of this beginner-friendly guide to SQLite. Well done!</p>
-    <p><b><span style="color:#e67e22;">Happy Querying! 👨🏽‍💻</span></b></p>
+    <p>You’ve now reached the end of this beginner-friendly guide to SQLite. Well done!
+        <li>Try connecting SQLite with Python, JavaScript, or your favorite language </li> 
+        <li>Experiment with joins, indexes, and complex queries  </li>
+        <li>Explore GUI tools like DB Browser for SQLite or DBeaver</li></p>
+    <p><b><span style="color:#e67e22; font-size: 18px;">Happy Querying! 👨🏽‍💻</span></b></p>
+
+    <hr>
 
     <img src="sql.png" alt="SQLite logo" style="height: 30px; vertical-align:-0.4em;">
     <span style="font-size: 13px; color: grey;">© 2025 SQLite</span>
