--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <h2 id="faqs">FAQs</h2>
     <p><b><span style="color:#e67e22;">Q1:</span> What makes SQLite different from other databases like MySQL?</b></p>
-    <p><span style="color:#e67e22;"><b>A:</b></span> SQLite is a lightweight, embedded database for small-scale apps, while MySQL is a full-scale database for larger, transactional applications.</p>
+    <p><span style="color:#e67e22; line-height: 30px; word-spacing: 0.05rem;"><b>A:</b></span> SQLite is a lightweight, embedded database for small-scale apps, while MySQL is a full-scale database for larger, transactional applications.</p>
 
     <p><b><span style="color:#e67e22;">Q2:</span> Can multiple users access the same SQLite database at once?</b></p>
     <p><span style="color:#e67e22;"><b>A:</b></span> SQLite allows concurrent reads, but only one write at a time. It’s best for single-user or low-write scenarios.</p>
