--- a/index.html
+++ b/index.html
@@ -9,18 +9,22 @@
 <body>
   <div class="wrapper">
     <h1>
+      <center>
       <span>Getting Started with </span>
-      <span style="color:#e67e22;">SQLite</span>
+      <span style="color:#185fb1;">SQLite</span>
+      </center>
     </h1>
+
+    <hr id="mainline">
 
     <h2 class="toc-header">Table of Contents</h2>
     <ul>
-      <li><a href="#what">What is SQLite?</a></li>
-      <li><a href="#why">Why Use SQLite?</a></li>
+      <li><a href="#what">What is SQLite ?</a></li>
+      <li><a href="#why">Why Use SQLite ?</a></li>
       <li><a href="#install">Installation Guide</a>
         <ul>
-          <li><a href="#step-1-download-sqlite">📦 Step 1: Download SQLite</a></li>
-          <li><a href="#step-2-verify-installation">🔽 Step 2: Verify Installation</a></li>
+          <li><a id="step1" href="#step-1-download-sqlite">📦 Step 1: Download SQLite</a></li>
+          <li><a id="step2" href="#step-2-verify-installation">✅ Step 2: Verify Installation</a></li>
         </ul>
       </li>
       <li><a href="#reso">Further Resources</a></li>
@@ -28,14 +32,14 @@
       <li><a href="#conclusion">Conclusion</a></li>
     </ul>
 
-    <hr id="mainline">
+    <hr>
 
-    <h2 id="what">What is <span style="color:#e67e22;">SQLite</span>?</h2>
+    <h2 id="what">What is <span style="color:#185fb1;">SQLite</span> ?</h2>
     <p style="line-height: 30px; word-spacing: 0.05rem;"><strong>SQLite</strong> is a lightweight, serverless, self-contained SQL database engine. Unlike other databases, it doesn’t require a separate server to run.</p>
 
     <hr>
 
-    <h2 id="why">Why use <span style="color:#e67e22;">SQLite</span>?</h2>
+    <h2 id="why">Why use <span style="color:#185fb1;">SQLite</span> ?</h2>
     <ul>
       <li>No server setup required</li>
       <li>Great for mobile apps, small projects, and prototyping</li>
@@ -46,7 +50,7 @@
     <hr>
 
     <h2 id="install">Installation Guide</h2>
-    <h3 id="step-1-download-sqlite">📦 Step 1: Download SQLite</h3>
+    <h3 id="step-1-download-sqlite">📦 Step 1 : Download SQLite</h3>
     <p>Go to the <a href="https://www.sqlite.org/download.html" target="_blank">SQLite Downloads page</a> and download:</p>
     <ul>
       <li><strong>Windows:</strong> <code>sqlite-tools-win32-x86.zip</code></li>
@@ -54,7 +58,7 @@
       <li><strong>Linux:</strong> <code>sudo apt install sqlite3</code></li>
     </ul>
 
-    <h3 id="step-2-verify-installation">🔽 Step 2: Verify Installation</h3>
+    <h3 id="step-2-verify-installation">✅ Step 2 : Verify Installation</h3>
     <p>Open a terminal and type:</p>
     <pre><code>sqlite --version</code></pre>
 
@@ -70,23 +74,23 @@
     <hr>
 
     <h2 id="faqs">FAQs</h2>
-    <p><b><span style="color:#e67e22;">Q1:</span> What makes SQLite different from other databases like MySQL?</b></p>
-    <p><span style="color:#e67e22; line-height: 30px; word-spacing: 0.05rem;"><b>A:</b></span> SQLite is a lightweight, embedded database for small-scale apps, while MySQL is a full-scale database for larger, transactional applications.</p>
+    <p><b><span style="color:#185fb1;">Q1:</span> What makes SQLite different from other databases like MySQL?</b></p>
+    <p><span style="color:#185fb1; line-height: 30px; word-spacing: 0.05rem;"><b>A:</b></span> SQLite is a lightweight, embedded database for small-scale apps, while MySQL is a full-scale database for larger, transactional applications.</p>
 
-    <p><b><span style="color:#e67e22;">Q2:</span> Can multiple users access the same SQLite database at once?</b></p>
-    <p><span style="color:#e67e22;"><b>A:</b></span> SQLite allows concurrent reads, but only one write at a time. It’s best for single-user or low-write scenarios.</p>
+    <p><b><span style="color:#185fb1;">Q2:</span> Can multiple users access the same SQLite database at once?</b></p>
+    <p><span style="color:#185fb1;"><b>A:</b></span> SQLite allows concurrent reads, but only one write at a time. It’s best for single-user or low-write scenarios.</p>
 
-    <p><b><span style="color:#e67e22;">Q3:</span> Where is the data stored in SQLite?</b></p>
-    <p><span style="color:#e67e22;"><b>A:</b></span> In a single <code>.db</code> file on your local system. For example: <code>sqlite3 mydata.db</code></p>
+    <p><b><span style="color:#185fb1;">Q3:</span> Where is the data stored in SQLite?</b></p>
+    <p><span style="color:#185fb1;"><b>A:</b></span> In a single <code>.db</code> file on your local system. For example: <code>sqlite3 mydata.db</code></p>
         
-    <p><b><span style="color:#e67e22;">Q4:</span> Can I use SQLite with Python / Java / Node.js?</b></p>
-    <p><span style="color:#e67e22;"><b>A:</b></span> Yes!
+    <p><b><span style="color:#185fb1;">Q4:</span> Can I use SQLite with Python / Java / Node.js?</b></p>
+    <p><span style="color:#185fb1;"><b>A:</b></span> Yes!
         <li>Python: <code>sqlite3</code> module (built-in)</li>  
         <li>Node.js: <code>sqlite3</code> or <code>better-sqlite3</code></li>   
         <li>Java: Use <code>JDBC</code> with an SQLite driver</li></p>
         
-    <p><b><span style="color:#e67e22;">Q5:</span> How do I back up a SQLite database?</b></p>
-    <p><span style="color:#e67e22;"><b>A:</b></span> Just copy the <code>.db</code> file. Ensure no write operations are happening during the copy..</p>
+    <p><b><span style="color:#185fb1;">Q5:</span> How do I back up a SQLite database?</b></p>
+    <p><span style="color:#185fb1;"><b>A:</b></span> Just copy the <code>.db</code> file. Ensure no write operations are happening during the copy..</p>
 
     <hr>
 
@@ -96,7 +100,7 @@
         <li>Try connecting SQLite with Python, JavaScript, or your favorite language </li> 
         <li>Experiment with joins, indexes, and complex queries  </li>
         <li>Explore GUI tools like DB Browser for SQLite or DBeaver</li></p>
-    <p><b><span style="color:#e67e22; font-size: 18px;">Happy Querying! 👨🏽‍💻</span></b></p>
+    <p><b><span style="color:#185fb1; font-size: 16px;">Happy Querying! 👨🏽‍💻</span></b></p>
 
     <hr>
 
