new design changes

--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
     </h1>
 
     <hr id="mainline">
+  
+  <div class="container">
+  <aside class="sidebar">
 
     <h2 class="toc-header">Table of Contents</h2>
-    <ul>
+    <ul class="indent">
       <li><a href="#what">What is SQLite ?</a></li>
       <li><a href="#why">Why Use SQLite ?</a></li>
       <li><a href="#install">Installation Guide</a>
@@ -31,6 +34,7 @@
       <li><a href="#faqs">FAQs</a></li>
       <li><a href="#conclusion">Conclusion</a></li>
     </ul>
+  </aside>
 
     <hr>
 
@@ -104,8 +108,6 @@
 
     <hr>
 
-    <img src="sql.png" alt="SQLite logo" style="height: 30px; vertical-align:-0.3em;">
-    <span style="font-size: 13px; color: grey;">© 2025 SQLite</span>
   </div>
 </body>
 </html>
